--- a/FreeCodeCampPlayGround/FreeCodeCampPlayGround.csproj
+++ b/FreeCodeCampPlayGround/FreeCodeCampPlayGround.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="24algo.aspx" />
+    <Content Include="AddToArray.aspx" />
     <Content Include="Content\profile.css" />
     <Content Include="FCCProfile.aspx" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
@@ -85,6 +86,13 @@
     </Compile>
     <Compile Include="24algo.aspx.designer.cs">
       <DependentUpon>24algo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AddToArray.aspx.cs">
+      <DependentUpon>AddToArray.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AddToArray.aspx.designer.cs">
+      <DependentUpon>AddToArray.aspx</DependentUpon>
     </Compile>
     <Compile Include="FCCProfile.aspx.cs">
       <DependentUpon>FCCProfile.aspx</DependentUpon>
